--- a/brand.html
+++ b/brand.html
@@ -6,6 +6,7 @@
     <title>YSL</title>
     <link href="css/header.css" rel="stylesheet" />
     <link href="css/brand.css" rel="stylesheet" />
+    <link href="css/footer.css" rel="stylesheet" />
     <link
       rel="stylesheet"
       href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200"
@@ -16,13 +17,9 @@
       href="https://fonts.googleapis.com/css2?family=Montserrat+Alternates:wght@100;300;400;500;600;700;800;900&family=Montserrat:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300&family=Nanum+Gothic:wght@400;700;800&family=Noto+Sans+KR:wght@100;300;400;500;700;900&family=Play&family=Playfair+Display:wght@700&display=swap"
       rel="stylesheet"
     />
-    <link
-      rel="stylesheet"
-      href="https://cdnjs.cloudflare.com/ajax/libs/fullPage.js/3.1.2/fullpage.min.css"
-    />
+
     <script src="js/jquery-3.7.0.min.js"></script>
     <script src="js/brand.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/fullPage.js/3.1.2/fullpage.min.js"></script>
 
     <style>
       @font-face {
@@ -41,9 +38,9 @@
       </h1>
       <ul class="menu">
         <li><a href="brand.html">브랜드스토리</a></li>
-        <li><a href="#">베스트셀러</a></li>
-        <li><a href="#">홀리데이 시리즈</a></li>
-        <li><a href="#">공식몰 단독 이벤트</a></li>
+        <li><a href="best.html">베스트셀러</a></li>
+        <li><a href="holiday.html">홀리데이 시리즈</a></li>
+        <li><a href="event.html">공식몰 단독 이벤트</a></li>
       </ul>
     </header>
     <div id="fullpage">
@@ -52,7 +49,7 @@
           <img src="img/bradbg.jpg" />
           <div class="visual_text">
             <h2>BRAND STORY</h2>
-            <h3>브랜드 스토리</h3>
+            <h3>Saint Laurent Story</h3>
           </div>
         </div>
       </div>
@@ -118,8 +115,46 @@
           </li>
         </ul>
       </div>
-      <div class="section"></div>
+
       <div class="section">
+        <div class="row-outer">
+          <div class="container">
+            <div class="heading">
+              <h1>세기의 컬렉터 이브 생 로랑을 추억하다</h1>
+            </div>
+            <div class="grid-gallery">
+              <div class="item item1">
+                <img src="img/brand_2.jpg" />
+              </div>
+              <div class="item item2">
+                <img src="img/brand_7.jpg" />
+              </div>
+              <div class="item item3">
+                <img src="img/brand_4.jpg" />
+              </div>
+              <div class="item item4">
+                <img src="img/gettyimages-83510571-650abc1e952e7.jpg" />
+              </div>
+              <div class="item item5">
+                <img src="img/brand_5.jpg" />
+              </div>
+              <div class="item item6">
+                <img src="img/brand_6.jpg" />
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="section">
+        <div class="ysl_text2">
+          <h2>
+            "The most beautiful makeup for a woman is passion. But cosmetics are
+            easier to buy"
+          </h2>
+          <h3>"아름다운 것을 보는 능력은 영원한 희망을 주는 것이다."</h3>
+          <h3>- 이브 생 로랑 (Yves Saint Laurent)-</h3>
+        </div>
+
         <footer>
           <ul class="fo1">
             <li>
@@ -185,17 +220,5 @@
         </footer>
       </div>
     </div>
-    <script>
-      $(document).ready(function () {
-        $("#fullpage").fullpage({
-          navigation: true,
-          scrollingSpeed: 1000, // 스크롤 속도 (밀리초)
-          afterLoad: function (origin, destination, direction) {
-            // 각 섹션으로 이동 시 실행되는 콜백 함수
-            console.log("Section " + destination.index + " loaded");
-          },
-        });
-      });
-    </script>
   </body>
 </html>
