--- a/event.html
+++ b/event.html
@@ -54,16 +54,19 @@
           </h3>
           <h4>
             소중한 사람을 위해 메시지를 담아 <br />
-            세상에 단 하나뿐인 입생로랑을 선물하세요
+            <span>세상에 단 하나뿐인 입생로랑</span>을 선물하세요
           </h4>
           <h5>CUSTONIZE YOUR YSL GIFT</h5>
         </div>
-        <h4>
-          입생로랑 뷰티 공식 온라인몰에서는 특정 립 제품에<br />
-          <span>나만의 이니셜을 새길 수 있는 이니셜</span> 각인 서비스를
-          진행합니다.<br />
-          더욱 특별한 입생로랑 뷰티를 경험하세요.
-        </h4>
+        <div class="con1_text">
+          <h4>
+            입생로랑 뷰티 공식 온라인몰에서는 특정 립 제품에<br />
+            <span>나만의 이니셜을 새길 수 있는 이니셜</span> 각인 서비스를
+            진행합니다.<br />
+            더욱 특별한 입생로랑 뷰티를 경험하세요.
+          </h4>
+        </div>
+
         <div class="con1_2">
           <h2>ENGRAVING</h2>
           <h3>각인 서비스 신청 방법</h3>
@@ -89,9 +92,7 @@
             </li>
             <li>
               <h3>STEP3.</h3>
-              <img
-                src="img/chat-comment-oval-speech-bubble-with-text-lines_icon-icons.com_73302.png"
-              />
+              <img src="img/document_paper_work_text_file_icon_191646.png" />
               <h4>각인문구 입력</h4>
               <p>
                 영문 대문자,숫자<br />
@@ -100,6 +101,70 @@
             </li>
           </ul>
         </div>
+      </div>
+      <div id="con2">
+        <h2>
+          URBAN<br />
+          SKIN CHECK
+        </h2>
+        <ul class="con2_1">
+          <li><img src="img/FACE6.jpg" /></li>
+          <li>
+            <h4>
+              입생로랑의 특별한 AI피부<br />분석으로 찾는 맞춤형 루틴 피부
+              진단<br />
+              후 특별한 무료 스킨테어 샘플 키트도<br />
+              함께 만나보세요.
+            </h4>
+          </li>
+        </ul>
+        <h3>작동방식</h3>
+        <ul class="con2_2">
+          <li>
+            <img src="img/face1.jpg" />
+            <h4>1단계:촬영</h4>
+            <p>
+              셀카를 찍은 후 당신의 피부를 분석하기 위한 질문에 응답해주세요.
+            </p>
+          </li>
+          <li>
+            <img src="img/face2.jpg" />
+            <h4>2단계:분석</h4>
+            <p>
+              YSL만의 디지털 전문가가 건강한 피부를 관리 하는데 도움이 될
+              사항들을 분석해 줍니다.
+            </p>
+          </li>
+          <li>
+            <img src="img/face3.jpg" />
+            <h4>3단계:제품추천</h4>
+            <p>당신에게 제안된 맞춤 스킨케어 루틴을 확인해 보세요.</p>
+          </li>
+        </ul>
+      </div>
+      <div id="con3">
+        <div class="con3_1">
+          <img src="img/virtual-try-on-desk.jpg" />
+          <h3>가상 메이크업 서비스</h3>
+          <p>
+            언제 어디서든 원하는<br />
+            쉐이드를 체험해 보세요
+          </p>
+          <h4>VIRTUAL TRY ON</h4>
+        </div>
+
+        <ul class="con3_2">
+          <li><img src="img/ysl-beauty-hotel.png" /></li>
+          <li>
+            <h4>
+              대담한 립 쉐이드/완벽한 피부톤 다채로운 서비스를 경험해보세요<br />
+              나에게 가장 잘 어울리는 피니시를 만나 볼 수 있습니다
+            </h4>
+            <div class="con3_box">
+              <a href="#">체험하기</a>
+            </div>
+          </li>
+        </ul>
       </div>
     </div>
     <footer>
