--- a/best.html
+++ b/best.html
@@ -39,7 +39,7 @@
         <li><a href="brand.html">브랜드스토리</a></li>
         <li><a href="best.html">베스트셀러</a></li>
         <li><a href="holiday.html">홀리데이 시리즈</a></li>
-        <li><a href="#">공식몰 단독 이벤트</a></li>
+        <li><a href="event.html">공식몰 단독 이벤트</a></li>
       </ul>
     </header>
     <div id="container">
