--- a/brand.html
+++ b/brand.html
@@ -54,7 +54,7 @@
         </div>
       </div>
       <div class="section">
-        <ul class="ysl_1">
+        <ul class="ysl_1 y1">
           <li><img src="img/brand1.jpg" /></li>
           <li>
             <div class="ysl_text">
@@ -73,7 +73,7 @@
         </ul>
       </div>
       <div class="section">
-        <ul class="ysl_1">
+        <ul class="ysl_1 y2">
           <li>
             <div class="ysl_text">
               <h3>패션계에 첫 발을 내딛다</h3>
@@ -95,7 +95,7 @@
         </ul>
       </div>
       <div class="section">
-        <ul class="ysl_1">
+        <ul class="ysl_1 y3">
           <li><img src="img/brand3.jpg" /></li>
           <li>
             <div class="ysl_text">
@@ -120,7 +120,7 @@
         <div class="row-outer">
           <div class="container">
             <div class="heading">
-              <h1>세기의 컬렉터 이브 생 로랑을 추억하다</h1>
+              <h1>Remembering Yves Saint Laurent</h1>
             </div>
             <div class="grid-gallery">
               <div class="item item1">
