--- a/event.html
+++ b/event.html
@@ -59,12 +59,12 @@
           <h5>CUSTONIZE YOUR YSL GIFT</h5>
         </div>
         <div class="con1_text">
+          <h4>입생로랑 뷰티 공식 온라인몰에서는 특정 립 제품에</h4>
           <h4>
-            입생로랑 뷰티 공식 온라인몰에서는 특정 립 제품에<br />
             <span>나만의 이니셜을 새길 수 있는 이니셜</span> 각인 서비스를
-            진행합니다.<br />
-            더욱 특별한 입생로랑 뷰티를 경험하세요.
+            진행합니다.
           </h4>
+          <h4>더욱 특별한 입생로랑 뷰티를 경험하세요.</h4>
         </div>
 
         <div class="con1_2">
@@ -116,6 +116,9 @@
               후 특별한 무료 스킨테어 샘플 키트도<br />
               함께 만나보세요.
             </h4>
+            <div class="con2_box">
+              <a href="#">체험하기</a>
+            </div>
           </li>
         </ul>
         <h3>작동방식</h3>
@@ -154,7 +157,9 @@
         </div>
 
         <ul class="con3_2">
-          <li><img src="img/ysl-beauty-hotel.png" /></li>
+          <li>
+            <img src="img/YSL-Beauty-Blog-Banner-1024x536.png" />
+          </li>
           <li>
             <h4>
               대담한 립 쉐이드/완벽한 피부톤 다채로운 서비스를 경험해보세요<br />
