--- a/holiday.html
+++ b/holiday.html
@@ -55,14 +55,12 @@
           <img src="img/holiday_img1.jpg" />
         </div>
 
-        <h4>
-          금빛의 눈송이들이 이끄는 빛을 따라<br />
-          아이스 판타지로 여러분을 초대합니다.
-        </h4>
+        <h4>금빛의 눈송이들이 이끄는 빛을 따라</h4>
+        <h4>아이스 판타지로 여러분을 초대합니다.</h4>
       </div>
       <div id="con2">
         <h1>GOLD HOLIDAY COLLECTION</h1>
-        <ul class="beauty_list">
+        <ul class="beauty_list b1">
           <li>
             <div class="listimg">
               <div class="list_img1">
@@ -82,7 +80,7 @@
             </div>
           </li>
         </ul>
-        <ul class="beauty_list">
+        <ul class="beauty_list b2">
           <li>
             <h2>꾸뛰르 미니 클러치</h2>
             <h3>
@@ -105,7 +103,7 @@
             </div>
           </li>
         </ul>
-        <ul class="beauty_list">
+        <ul class="beauty_list b3">
           <li>
             <div class="listimg">
               <div class="list_img1">
@@ -125,7 +123,7 @@
             </div>
           </li>
         </ul>
-        <ul class="beauty_list">
+        <ul class="beauty_list b4">
           <li>
             <h2>리브르 오 드 빠르펭</h2>
             <h3>입생로랑의 아이코닉 향수</h3>
@@ -147,10 +145,8 @@
         </ul>
       </div>
       <div id="con3">
-        <h2>
-          입생로랑 홀리데이 컬렉션과 함께<br />
-          특별한 아이스 판타지에 빠져보세요
-        </h2>
+        <h2>입생로랑 홀리데이 컬렉션과 함께</h2>
+        <h2>특별한 아이스 판타지에 빠져보세요</h2>
         <video class="video" autoplay controls>
           <source type="video/mp4" src="img/holidaycollection_231103.mp4" />
         </video>
