--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
               ​특별한 구매 혜택과 서비스를 만나보세요​
             </p>
             <div class="visual_box">
-              <a href="#">자세히 보기</a>
+              <a href="event.html">자세히 보기</a>
             </div>
           </div>
         </li>
@@ -74,7 +74,7 @@
               ​특별한 구매 혜택과 서비스를 만나보세요​
             </p>
             <div class="visual_box">
-              <a href="#">자세히 보기</a>
+              <a href="event.html">자세히 보기</a>
             </div>
           </div>
         </li>
@@ -88,7 +88,7 @@
               ​특별한 구매 혜택과 서비스를 만나보세요​
             </p>
             <div class="visual_box">
-              <a href="#">자세히 보기</a>
+              <a href="event.html">자세히 보기</a>
             </div>
           </div>
         </li>
@@ -102,7 +102,7 @@
               ​특별한 구매 혜택과 서비스를 만나보세요​
             </p>
             <div class="visual_box">
-              <a href="#">자세히 보기</a>
+              <a href="event.html">자세히 보기</a>
             </div>
           </div>
         </li>
@@ -176,14 +176,14 @@
               <img src="img/holiday1.jpg" />
               <div class="limited">LIMITED</div>
               <div class="more">
-                <a href="#">자세히 보기</a>
+                <a href="holiday.html">자세히 보기</a>
               </div>
             </div>
             <h4>루미너스 하이라이터 쿠션</h4>
             <p>홀리데이 한정판</p>
             <h5>95,000원</h5>
             <div class="box">
-              <a href="#">구매하기</a>
+              <a href="holiday.html">구매하기</a>
             </div>
           </li>
           <li>
@@ -191,14 +191,14 @@
               <img src="img/holiday2.jpg" />
               <div class="limited">LIMITED</div>
               <div class="more">
-                <a href="#">자세히 보기</a>
+                <a href="holiday.html">자세히 보기</a>
               </div>
             </div>
             <h4>꾸뛰르 미니 클러치 세트</h4>
             <p>홀리데이 한정판</p>
             <h5>95,000원</h5>
             <div class="box">
-              <a href="#">구매하기</a>
+              <a href="holiday.html">구매하기</a>
             </div>
           </li>
           <li>
@@ -206,14 +206,14 @@
               <img src="img/holiday3.jpg" />
               <div class="limited">LIMITED</div>
               <div class="more">
-                <a href="#">자세히 보기</a>
+                <a href="holiday.html">자세히 보기</a>
               </div>
             </div>
             <h4>루쥬 쀠르 꾸뛰르 더 슬림</h4>
             <p>홀리데이 한정판</p>
             <h5>69,000원</h5>
             <div class="box">
-              <a href="#">구매하기</a>
+              <a href="holiday.html">구매하기</a>
             </div>
           </li>
           <li>
@@ -221,7 +221,7 @@
               <img src="img/holiday4.jpg" />
               <div class="limited">LIMITED</div>
               <div class="more">
-                <a href="#">자세히 보기</a>
+                <a href="holiday.html">자세히 보기</a>
               </div>
             </div>
 
@@ -229,7 +229,7 @@
             <p>홀리데이 한정판</p>
             <h5>63,000원</h5>
             <div class="box">
-              <a href="#">구매하기</a>
+              <a href="holiday.html">구매하기</a>
             </div>
           </li>
         </ul>
@@ -257,7 +257,7 @@
             <p>입생로랑의 아이코닉 쿠션, 슬림 시그니처를 입다</p>
             <h2>NEW 엉크르 드 뽀 쿠션</h2>
             <h5>잉크 쿠션</h5>
-            <a href="#">자세히보기</a>
+            <a href="best.html">자세히보기</a>
           </li>
         </ul>
         <ul class="beauty_list">
@@ -265,7 +265,7 @@
             <p>자연스럽게 빛나는 입술, 강력한 케어로 완성되는 촉촉함</p>
             <h2>루쥬 볼륍떼 캔디 글레이즈</h2>
             <h5>캔디 글레이즈 컬러밤</h5>
-            <a href="#">자세히보기</a>
+            <a href="best.html">자세히보기</a>
           </li>
           <li>
             <div class="listimg">
@@ -293,7 +293,7 @@
             <p>NEW 리브르 앱솔루트 플라틴 향수</p>
             <h2>리브르 앱솔루트 플라틴</h2>
             <h5>프레시 아로마틱 라벤터 향수</h5>
-            <a href="#">자세히보기</a>
+            <a href="best.html">자세히보기</a>
           </li>
         </ul>
       </div>
@@ -370,7 +370,7 @@
                     공식몰 회원에게만 제공되는 최대 50% <br />
                     PRIVATE SALE을 만나보세요!
                   </p>
-                  <span><a href="#">자세히 보기</a></span>
+                  <span><a href="event.html">자세히 보기</a></span>
                 </li>
               </ul>
             </li>
@@ -380,7 +380,7 @@
                 <li>
                   <h4>입생로랑 각인 서비스</h4>
                   <p>더욱 특별한 입생로랑 뷰티를 경험하세요!</p>
-                  <span><a href="#">자세히 보기</a></span>
+                  <span><a href="event.html">자세히 보기</a></span>
                 </li>
               </ul>
             </li>
@@ -394,7 +394,7 @@
                     루틴 피부 진단 후 특별한 무료 스킨케어<br />
                     샘플티드도 함께 만나보세요.
                   </p>
-                  <span><a href="#">자세히 보기</a></span>
+                  <span><a href="event.html">자세히 보기</a></span>
                 </li>
               </ul>
             </li>
@@ -407,7 +407,7 @@
                     언제 어디서든 원하는 쉐이드를<br />
                     체험해보세요.
                   </p>
-                  <span><a href="#">자세히 보기</a></span>
+                  <span><a href="event.html">자세히 보기</a></span>
                 </li>
               </ul>
             </li>
@@ -420,7 +420,7 @@
                     공식몰 회원에게만 제공되는 최대 50% <br />
                     PRIVATE SALE을 만나보세요!
                   </p>
-                  <span><a href="#">자세히 보기</a></span>
+                  <span><a href="event.html">자세히 보기</a></span>
                 </li>
               </ul>
             </li>
