--- a/holiday.html
+++ b/holiday.html
@@ -147,7 +147,7 @@
       <div id="con3">
         <h2>입생로랑 홀리데이 컬렉션과 함께</h2>
         <h2>특별한 아이스 판타지에 빠져보세요</h2>
-        <video class="video" autoplay controls>
+        <video muted autoplay loop  cotrols playsinline>
           <source type="video/mp4" src="img/holidaycollection_231103.mp4" />
         </video>
       </div>
